  * checks/files{,.desc}:
    + [RA] Allow non-core Python packages to install files into
      /usr/lib/python*/dist-packages, the extension location for Python
      2.6 and later.  Thanks, Julian Andres Klode.  (Closes: #534212)
  * checks/init.d:
    + [RA] Take into account dangling symlinks in /etc/init.d.  Patch from
      Raphael Geissert.  (Closes: #534139)
  * checks/patch-systems:
    + [RA] Don't include the package name as extra data in tags that are
      only issued for source packages.  Patch from Raphael Geissert.
  * checks/scripts.desc:
    + [RA] Lower certainty of read-in-maintainer-script to possible and
      mention false positives.  Thanks, Raphaël Hertzog.  (Closes: #534276)

  * collection/strings:
    + [ADB] Handle the fact that, when Lintian is run as root, the output of
      "file" on set[gu]id files may include the fact that they are set[gu]id.
      Thanks, Peter Pentchev.  (Closes: #533618)

  * lib/Spelling.pm:
    + [RA] Add changes misspelling.
    + [RA] Fix correction for endianness.  Thanks, Raphael Geissert.
    + [RA] Only strip most punctuation from the end of each word, not from
      anywhere in the string.  We don't want to strip the period from
      res.size.  Thanks, Zack Weinberg.  (Closes: #534234)
  * lib/Tags.pm:
    + [RA] Replace all newlines in tag data with \n, not just the first.
      (Closes: #534141)

  * reporting/html_reports:
    + [RA] Change area back to section in the loop for generating the
      package index pages to be consistent with the page template.

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Fri, 19 Jun 2009 19:11:28 +0100

lintian (2.2.12) unstable; urgency=low

  The "Policy 3.8.2" release.
  
  * Summary of tag changes:
    + Added:
      - debug-symbols-directly-in-usr-lib-debug
      - dh_desktop-is-deprecated
      - dh_scrollkeeper-is-deprecated
      - file-in-discouraged-x11-font-directory
      - file-in-unknown-x11-font-directory
      - init.d-script-sourcing-without-test