@@ -1,0 +1,6 @@
+#!/bin/sh
+set -e
+if [ "$1" = purse ] ; then
+    update-rc.d lintian remove >/dev/null
+fi
+#DEBHELPER#
