@@ -1,0 +1,7 @@
+Testname: init.d-symlink
+Sequence: 6000
+Version: 1.0
+Description: Check proper handling of symlinked init scripts
+Test-Against:
+ init.d-script-not-included-in-package
+ init.d-script-not-marked-as-conffile
